--- a/test.ipynb
+++ b/test.ipynb
@@ -2,14 +2,220 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 1045058964\n"
+     ]
+    }
+   ],
    "source": [
     "from src.models.cyclegan import CycleGan\n",
     "import pytorch_lightning as pl\n",
     "from src.datamodule import CelebAData\n",
-    "pl.seed_everything()"
+    "pl.seed_everything()\n",
+    "\n",
+    "\n",
+    "class EncoderBlock(nn.Module):\n",
+    "    def __init__(self, in_channels, out_channels):\n",
+    "        super().__init__()\n",
+    "        self.c1 = nn.Conv2d(in_channels, out_channels, 4, 2, 1)\n",
+    "        self.b1 = nn.BatchNorm2d(out_channels)\n",
+    "        self.c2 = nn.Conv2d(out_channels, out_channels, 3, padding=\"same\")\n",
+    "        self.b2 = nn.BatchNorm2d(out_channels)\n",
+    "        self.c3 = nn.Conv2d(out_channels, out_channels, 3, padding=\"same\")\n",
+    "        self.b3 = nn.BatchNorm2d(out_channels)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = nn.ReLU(True)(self.b1(self.c1(x)))\n",
+    "        y = x\n",
+    "        x = nn.ReLU(True)(self.b2(self.c2(x)))\n",
+    "        x = nn.ReLU(True)(self.b3(self.c3(x)))\n",
+    "        x = y+x\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "class DecoderBlock(nn.Module):\n",
+    "    def __init__(self, in_channels, out_channels):\n",
+    "        super().__init__()\n",
+    "        self.c1 = nn.ConvTranspose2d(in_channels, out_channels, 4, 2, 1)\n",
+    "        self.b1 = nn.BatchNorm2d(out_channels)\n",
+    "        self.c2 = nn.ConvTranspose2d(out_channels, out_channels, 3, padding=1)\n",
+    "        self.b2 = nn.BatchNorm2d(out_channels)\n",
+    "        self.c3 = nn.ConvTranspose2d(out_channels, out_channels, 3, padding=1)\n",
+    "        self.b3 = nn.BatchNorm2d(out_channels)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = nn.ReLU(True)(self.b1(self.c1(x)))\n",
+    "        y = x\n",
+    "        x = nn.ReLU(True)(self.b2(self.c2(x)))\n",
+    "        x = nn.ReLU(True)(self.b3(self.c3(x)))\n",
+    "        x = y+x\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Linear-1                 [-1, 1000]         129,000\n",
+      "         LeakyReLU-2                 [-1, 1000]               0\n",
+      "            Linear-3                 [-1, 1000]       1,001,000\n",
+      "         LeakyReLU-4                 [-1, 1000]               0\n",
+      "            Linear-5                 [-1, 1000]       1,001,000\n",
+      "         LeakyReLU-6                 [-1, 1000]               0\n",
+      "            Linear-7                 [-1, 1000]       1,001,000\n",
+      "         LeakyReLU-8                 [-1, 1000]               0\n",
+      "            Linear-9                 [-1, 1000]       1,001,000\n",
+      "        LeakyReLU-10                 [-1, 1000]               0\n",
+      "           Linear-11                    [-1, 2]           2,002\n",
+      "================================================================\n",
+      "Total params: 4,135,002\n",
+      "Trainable params: 4,135,002\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.00\n",
+      "Forward/backward pass size (MB): 0.08\n",
+      "Params size (MB): 15.77\n",
+      "Estimated Total Size (MB): 15.85\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.init as init\n",
+    "\n",
+    "class FactorVAE2(nn.Module):\n",
+    "    \"\"\"Encoder and Decoder architecture for 3D Shapes, Celeba, Chairs data.\"\"\"\n",
+    "    def __init__(self, z_dim=128):\n",
+    "        super(FactorVAE2, self).__init__()\n",
+    "        self.z_dim = z_dim\n",
+    "        self.encode = nn.Sequential(\n",
+    "            EncoderBlock(3,32),\n",
+    "            EncoderBlock(32,32),\n",
+    "            EncoderBlock(32,32),\n",
+    "            EncoderBlock(32,64),\n",
+    "            EncoderBlock(64,64),\n",
+    "            EncoderBlock(64,128),\n",
+    "            EncoderBlock(128,128),\n",
+    "            nn.Conv2d(128, 2*z_dim, 1)\n",
+    "        )\n",
+    "        self.decode = nn.Sequential(\n",
+    "            nn.Conv2d(z_dim, 128, 1),\n",
+    "            nn.ReLU(True),\n",
+    "            DecoderBlock(128, 128),\n",
+    "            DecoderBlock(128, 64),\n",
+    "            DecoderBlock(64, 64),\n",
+    "            DecoderBlock(64, 32),\n",
+    "            DecoderBlock(32, 32),\n",
+    "            DecoderBlock(32, 32),\n",
+    "            DecoderBlock(32, 3),\n",
+    "        )\n",
+    "        self.weight_init()\n",
+    "\n",
+    "    def weight_init(self, mode='normal'):\n",
+    "        if mode == 'kaiming':\n",
+    "            initializer = kaiming_init\n",
+    "        elif mode == 'normal':\n",
+    "            initializer = normal_init\n",
+    "\n",
+    "        for block in self._modules:\n",
+    "            for m in self._modules[block]:\n",
+    "                initializer(m)\n",
+    "\n",
+    "    def reparametrize(self, mu, logvar):\n",
+    "        std = logvar.mul(0.5).exp_()\n",
+    "        eps = std.data.new(std.size()).normal_()\n",
+    "        return eps.mul(std).add_(mu)\n",
+    "\n",
+    "    def forward(self, x, no_dec=False):\n",
+    "        stats = self.encode(x)\n",
+    "        mu = stats[:, :self.z_dim]\n",
+    "        logvar = stats[:, self.z_dim:]\n",
+    "        z = self.reparametrize(mu, logvar)\n",
+    "        print(z.shape)\n",
+    "        if no_dec:\n",
+    "            return z.squeeze()\n",
+    "        else:\n",
+    "            x_recon = self.decode(z)\n",
+    "            print(x_recon.shape)\n",
+    "            print(mu.shape)\n",
+    "            print(logvar.shape)\n",
+    "            return x_recon, mu, logvar, z.squeeze()\n",
+    "\n",
+    "\n",
+    "class Discriminator(nn.Module):\n",
+    "    def __init__(self, z_dim):\n",
+    "        super(Discriminator, self).__init__()\n",
+    "        self.z_dim = z_dim\n",
+    "        self.net = nn.Sequential(\n",
+    "            nn.Linear(z_dim, 1000),\n",
+    "            nn.LeakyReLU(0.2, True),\n",
+    "            nn.Linear(1000, 1000),\n",
+    "            nn.LeakyReLU(0.2, True),\n",
+    "            nn.Linear(1000, 1000),\n",
+    "            nn.LeakyReLU(0.2, True),\n",
+    "            nn.Linear(1000, 1000),\n",
+    "            nn.LeakyReLU(0.2, True),\n",
+    "            nn.Linear(1000, 1000),\n",
+    "            nn.LeakyReLU(0.2, True),\n",
+    "            nn.Linear(1000, 2),\n",
+    "        )\n",
+    "        self.weight_init()\n",
+    "\n",
+    "    def weight_init(self, mode='normal'):\n",
+    "        if mode == 'kaiming':\n",
+    "            initializer = kaiming_init\n",
+    "        elif mode == 'normal':\n",
+    "            initializer = normal_init\n",
+    "\n",
+    "        for block in self._modules:\n",
+    "            for m in self._modules[block]:\n",
+    "                initializer(m)\n",
+    "\n",
+    "    def forward(self, z):\n",
+    "        return self.net(z.squeeze()).squeeze()\n",
+    "\n",
+    "\n",
+    "def kaiming_init(m):\n",
+    "    if isinstance(m, (nn.Linear, nn.Conv2d)):\n",
+    "        init.kaiming_normal_(m.weight)\n",
+    "        if m.bias is not None:\n",
+    "            m.bias.data.fill_(0)\n",
+    "    elif isinstance(m, (nn.BatchNorm1d, nn.BatchNorm2d)):\n",
+    "        m.weight.data.fill_(1)\n",
+    "        if m.bias is not None:\n",
+    "            m.bias.data.fill_(0)\n",
+    "\n",
+    "\n",
+    "def normal_init(m):\n",
+    "    if isinstance(m, (nn.Linear, nn.Conv2d)):\n",
+    "        init.normal_(m.weight, 0, 0.02)\n",
+    "        if m.bias is not None:\n",
+    "            m.bias.data.fill_(0)\n",
+    "    elif isinstance(m, (nn.BatchNorm1d, nn.BatchNorm2d)):\n",
+    "        m.weight.data.fill_(1)\n",
+    "        if m.bias is not None:\n",
+    "            m.bias.data.fill_(0)\n",
+    "\n",
+    "import torchsummary\n",
+    "# x = FactorVAE2().to('cuda:0')\n",
+    "x = Discriminator(128).to('cuda:0')\n",
+    "torchsummary.summary(x, (128,1,1))"
    ]
   },
   {
